k8s/microservice.yml
apiVersion: v1
kind: Service
metadata:
  name: microservice-clister-ip-service
spec:
  type: ClusterIP
  selector:
    component: microservice
  ports:
    - port: 3000
      targetPort: 3000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: microservice
  template:
    metadata:
      labels:
        component: microservice
    spec:
      containers:
        - name: microservice-container
          image: humanamburu/gcp-microservice
          ports:
            - containerPort: 3000
